Logging (#46)
* Stop using file-based logging for zookeeper, kafka and kafka-connect

Instead just log to stdout, so k8s handles logging. This applies to both the 
application logs (log4j) and JVM GC logging.

In each case the log4j.properties is roughly based on the upstream version,
but I've used a slightly different, and consistent, pattern to always
include the thread name and to use ISO dates.

Fixes #21